--- a/html-basic.html
+++ b/html-basic.html
@@ -133,9 +133,29 @@
       <button>提交</button>
       <button type="reset">重置</button>
     </form>
-  
-    </dl>
+</dl>
+<hr>
+<img title="image title" src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" width=300 usemap="#somemap" alt="">
+<map name="somemap">
+  <area shape="rect" coords="55,108,205,200" href="https://www.mi.com/" alt="ieksoef" title="abc" target="_blank">
+  <area shape="circle" coords="133,262,90" href="" alt="">
+  <area shape="poly" coords="58,86,7,265,163,397,225,256,187,73" href="" alt="">
+</map
 </form>
+<hr>
+<a href="https://www.mi.com" target="frame1">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a>
+  <br>
+  <a>因为网站的嵌套对安全的网页来说不安全，所以不允许使用</a>
+  <br>
+  <iframe src="https://nodejs.org" name="frame1" frameborder="1"></iframe>
+
+<div>
+    怎样&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;&nasp;在这两个字之间空间这么大
+    <br>
+    怎么显示如下内容呢？
+    <br>
+    &lt;span>&lt;/span>
+</div>
 </body>
 <a id="bottom"></a>
 </html>
