--- a/noi.html
+++ b/noi.html
@@ -1,11 +1,11 @@
-<script id="ch0103/01" type="v">
+<script id="ch0103/01" xtype="v">
   var a = +prompt('请输入 a 的值：');
   var b = +prompt('请输入 b 的值：');
   var x = (a + b);
   console.log(x)
   </script>
 
-  <script id="ch0103/02" type="x">
+  <script id="ch0103/02" xtype="x">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
     var c = +prompt('请输入 c 的值：');
@@ -14,7 +14,7 @@
     console.log(x)
     </script>
 
-    <script id="ch0103/03" type="x">
+    <script id="ch0103/03" xtype="x">
         var a = +prompt('请输入 a 的值：');
         var b = +prompt('请输入 b 的值：');
         var c = +prompt('请输入 c 的值：');
@@ -26,7 +26,7 @@
         }
    </script>
 
-   <script id="ch0103/04" type="x">
+   <script id="ch0103/04" xtype="x">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
 
@@ -36,7 +36,7 @@
     console.log(y);
     </script>
 
-<script id="ch0103/05" type="x">
+<script id="ch0103/05" xtype="x">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
 
@@ -44,7 +44,7 @@
     console.log(x.toFixed(9));
  </script>
 
- <script id="ch0103/06" type="x">
+ <script id="ch0103/06" xtype="x">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
 
@@ -52,7 +52,7 @@
     console.log(x.toFixed(9));
  </script>
 
- <script id="ch0103/07" type="v">
+ <script id="ch0103/07" xtype="v">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
     var c = +prompt('请输入 c 的值：');
@@ -63,14 +63,14 @@
     console.log(y)
  </script>
 
-    <script id="ch0103/08" type="v">
+    <script id="ch0103/08" xtype="v">
         var a = +prompt('请输入华氏温度的值：');
         
         var x = 5 * (a - 32) / 9;
         console.log(x)
         </script>
 
-<script id="ch0103/09" type="v">
+<script id="ch0103/09" xtype="v">
     var a = +prompt('请输入圆的半径：');
     var b = 2 * a;
     var c = b * 3.14;
@@ -81,7 +81,7 @@
     console.log(d);
  </script>
 
-<script id="ch0103/10" type="v">
+<script id="ch0103/10" xtype="v">
     var a = +prompt('请输入电阻 a 的值：');
     var b = +prompt('请输入电阻 b 的值：');
     var y = 1 / (1 / a + 1 / b) ;
@@ -89,7 +89,7 @@
     console.log(y)
  </script>
 
- <script id="ch0103/11" type="v">
+ <script id="ch0103/11" xtype="v">
     var a = +prompt('请输入 a 的值：');
     var b = +prompt('请输入 b 的值：');
     var y = a % b ;
@@ -97,14 +97,14 @@
     console.log(y)
  </script>
 
- <script id="ch0103/12" type="v">
+ <script id="ch0103/12" xtype="v">
     var a = +prompt('请输入球的半径：');
     var y = 4 / 3 *3.14 * a * a * a ;
 
     console.log(y)
  </script>
 
-<script id="ch0103/13" type="v">
+<script id="ch0103/13" xtype="v">
     var a = +prompt('请输入一个三位数');
     var g = a % 10 ;
     var b = Math.floor(a / 100);
@@ -115,7 +115,7 @@
      console.log(x)
  </script>
 
- <script id="ch0103/14" type="v">
+ <script id="ch0103/14" xtype="v">
     var a = +prompt('请输入圆桶的高：');
     var b = +prompt('请输入圆桶半径：');
     var y = 3.14 * b * b * a ;
@@ -125,7 +125,7 @@
     console.log(x)
  </script>
 
-<script id="ch0103/15" type="v">
+<script id="ch0103/15" xtype="v">
     var a = +prompt('请输入苹果个数：');
     var b = +prompt('请输入虫子吃一个苹果要几个小时：');
     var c = +prompt('虫子吃了几个小时');
@@ -135,7 +135,7 @@
     console.log(y)
  </script>
 
- <script id="ch0103/16" type="v">
+ <script id="ch0103/16" xtype="v">
     var a = +prompt('请输入Xa的x轴坐标：');
     var b = +prompt('请输入Xa的y轴坐标：');
     var c = +prompt('请输入Xb的x轴坐标：');
@@ -147,7 +147,7 @@
     console.log(l)
  </script>
 
-<script id="ch0103/17" type="v">
+<script id="ch0103/17" txype="v">
     var a = +prompt('请输入Xa的x轴坐标：');
     var b = +prompt('请输入Xa的y轴坐标：');
     var c = +prompt('请输入Xb的x轴坐标：');
@@ -162,7 +162,7 @@
     console.log(l)
  </script>
 
-<script id="ch0103/18" type="v">
+<script id="ch0103/18" xtype="v">
     var a = +prompt('请输入等差数列第一项：');
     var b = +prompt('请输入等差数列第二项：');
     var c = +prompt('请输入所求的第N项：');
@@ -172,7 +172,7 @@
 console.log(y)
  </script>
 
-<script id="ch0103/19" type="v">
+<script id="ch0103/19" txype="v">
     var a = +prompt('请输入整数a：');
     var b = +prompt('请输入整数b：');
     var x = a * b ;
@@ -180,14 +180,14 @@ console.log(y)
 console.log(x)
  </script>
 
-<script id="ch0103/20" type="v">
+<script id="ch0103/20" xtype="v">
     var a = +prompt('请输入幂次：');
     var x = Math.pow(2,a) ;
    
 console.log(x)
  </script>
 
-<script id="ch0104/01" type="v">
+<script id="ch0104/01" txype="v">
     var a = +prompt('请输入整数a：');
     if(a > 0){
         console.log("positive")
@@ -200,14 +200,14 @@ console.log(x)
     }
  </script>
 
- <script id="ch0104/02" type="v">
+ <script id="ch0104/02" xtype="v">
     var a = +prompt('请输入a：');
     var x = Math.sqrt(a * a) ;
    
 console.log(x=x.toFixed(2))
  </script>
 
-<script id="ch0104/03" type="v">
+<script id="ch0104/03" xtype="v">
     var a = +prompt('请输入a：');
     var x = a % 2 ;
     if(x == 1){
@@ -218,7 +218,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/04" type="v">
+<script id="ch0104/04" txype="v">
     var a = prompt('请输入字符：');
     var b = a.charCodeAt();
     var x = b % 2 ;
@@ -230,7 +230,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/05" type="v">
+<script id="ch0104/05" txype="v">
     var a = +prompt('请输入整数a：');
     var b = +prompt('请输入整数b：');
     if(a == b){
@@ -245,7 +245,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/06" type="v">
+<script id="ch0104/06" tyxpe="v">
     var a = +prompt('请输入整数a：');
     if(a < 100 && a > 9){
         console.log('1')
@@ -255,7 +255,7 @@ console.log(x=x.toFixed(2))
 
 </script>
 
-<script id="ch0104/07" type="v">
+<script id="ch0104/07" txype="v">
     var a = +prompt('请输入幸运数：');
     var b = +prompt('请输入鼓励数：');
     if(a >= 10 || b >= 20){
@@ -266,7 +266,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/08" type="v">
+<script id="ch0104/08" txype="v">
     var a = prompt('请输正整数a：');
     var x = a % 3;
     var y = a % 5;
@@ -278,7 +278,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
- <script id="ch0104/09" type="v">
+ <script id="ch0104/09" tyxpe="v">
     var a = prompt('请输正整数a：');
     var x = a % 3;
     var y = a % 5;
@@ -315,7 +315,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/10" type="v">
+<script id="ch0104/10" xtype="v">
     var a = +prompt('请输入语文成绩：');
     var b = +prompt('请输入数学成绩：');
     if(a < 60 || b < 60){
@@ -326,7 +326,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/11" type="v">
+<script id="ch0104/11" xtype="v">
     var a = +prompt('请输周几约：');
     if(a ==1 || a == 3 || a == 5){
         console.log('NO')
@@ -336,7 +336,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/12" type="v">
+<script id="ch0104/12" xtype="v">
     var a = +prompt('请输距离：');
 
     if(a == 100){
@@ -351,7 +351,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/13" type="v">
+<script id="ch0104/13" xtype="v">
     var a = +prompt('请输函数值：');
     var x; 
     if(a >= 0 && a < 5){
@@ -368,7 +368,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/14" type="v">
+<script id="ch0104/14" xtype="v">
     var a = +prompt('请输重量：');
     var b = prompt('请输是否加急：');
     var c = b.charCodeAt();
@@ -400,7 +400,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/15" type="v">
+<script id="ch0104/15" xtype="v">
     var a = +prompt('请输入a：');
     var b = +prompt('请输入b：');
     var c = +prompt('请输入c：');
@@ -416,7 +416,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
- <script id="ch0104/15" type="v">
+ <script id="ch0104/15" xtype="v">
     var a = +prompt('请输入年份a：');
     var x = a % 4;
     var y = a % 100;
@@ -434,7 +434,7 @@ console.log(x=x.toFixed(2))
    
  </script>
 
-<script id="ch0104/16" type="v">
+<script id="ch0104/16" xtype="v">
     var a = +prompt('请输入a边：');
     var b = +prompt('请输入b边：');
     var c = +prompt('请输入c边：');
@@ -447,7 +447,7 @@ console.log(x=x.toFixed(2))
   
  </script>
 
- <script id="ch0104/18" type="v">
+ <script id="ch0104/18" xtype="v">
     var a = +prompt('请输入坐标点a：');
     var b = +prompt('请输入坐标点b：');
     
@@ -460,7 +460,7 @@ console.log(x=x.toFixed(2))
     }  
  </script>
 
- <script id="ch0104/19" type="v">
+ <script id="ch0104/19" xtype="v">
     var a =Number(prompt('请输入a'))
     var b =Number(prompt('请输入b'))
     var c =prompt('请输入符号')
@@ -487,7 +487,7 @@ console.log(x=x.toFixed(2))
     }
   </script>
 
-<script id="ch0104/20" type="v">
+<script id="ch0104/20" xtype="v">
 var a = +prompt('请输入 a 的值：')
 var b = +prompt('请输入 b 的值：')
 var c = +prompt('请输入 c 的值：')
@@ -518,7 +518,7 @@ if (delta == 0) {
 }
 </script>
 
-<script id="ch0104/21" type="v">
+<script id="ch0104/21" xtype="v">
     var a = +prompt('请输入苹果个数：');
     var b = +prompt('请输入虫子吃一个苹果要几个小时：');
     var c = +prompt('虫子吃了几个小时');
