--- a/noi.html
+++ b/noi.html
@@ -15,11 +15,10 @@
     </script>
 
     <script id="ch0103/03" xtype="x">
-         var a = Number(prompt())
-  var b = Number(prompt())
-  var c = Number(prompt())
-  var d = (a + b) / c
-  console.log(d | 0)
+   var a =  Number(prompt());
+  var b =  Number(prompt());
+  var c =  Number(prompt());
+  console.log((a+b)/c);
         
    </script>
 
@@ -184,11 +183,11 @@ console.log(x=x.toFixed(2))
  </script>
 
 <script id="ch0104/03" xtype="v">
-    var N = Number(prompt())
-  if(N % 2 == 0){
-    console.log('even')
-  }else{
-    console.log('odd')
+   var n =  Number(prompt());
+  if (n%2 == 0) {
+    console.log("even");
+  } else {
+    console.log("odd");
   }
    
  </script>
